Integrated search in frontend, small visible fixes.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -21,3 +21,11 @@
 #remote .tt-menu .tt-suggestion{
     margin: 0 10px;
 }
+
+.round {
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -khtml-border-radius: 50%;
+    border-radius: 50%;
+    behavior: url(border-radius.htc);
+}
